# DecentralizedAIonIC

./: .gitignore  LICENSE  NotesOnStages.md  README-custom-domain.md  README.md  canister_ids.json  dfx.json  index.html  mops.toml  package-lock.json  package-set.dhall  package.json  postcss.config.cjs  pwabuilder-adv-sw.js  service-worker_generated.js  svelte.config.cjs  tailwind.config.cjs  tsconfig.json  vessel.dhall  vite.config.ts
notes/: NotesOnStages.md
src/DeVinci_backend/: Hex.mo  Http.mo  Ledger.mo  Protocol.mo  Types.mo  Utils.mo  main.mo
src/DeVinci_frontend/: .ic-assets.json  App.svelte  main.ts  service-worker.ts  store.ts  worker.ts
src/arcmindvectordb/: Cargo.toml  arcmindvectordb.did
src/arcmindvectordb/embeddings/: arcmind-content.txt  arcmind-vec.txt  arcmindtesting-content.txt  arcmindtesting-vec.txt  gc-weather-content.txt  gc-weather-vec.txt  investment1-content.txt  investment1-vec.txt  investment2-content.txt  investment2-vec.txt  nmn1-content.txt  nmn1-vec.txt  nmn2-content.txt  nmn2-vec.txt
src/arcmindvectordb/interact/: add-vec-dev.sh  add-vec-test-knowledgebase.sh  add-vec.sh  search-vec-dev.sh  search-vec-test-knowledgebase.sh  search-vec.sh
src/arcmindvectordb/scripts/: add-ic-identity.sh  provision.sh  provision_new.sh
src/arcmindvectordb/src/: datatype.rs  embeddings.rs  guards.rs  lib.rs  memory.rs
src/assets/: .ic-assets.json
src/canister_creation_canister/: README.md  canister_ids.json  dfx.json  mops.toml
src/proxy_backend/: Types.mo  main.mo
training/: export_onnx_model.py  model_params.py  train_onnx_model.py
(+165 files in other folders)
